--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express-fileupload": "^1.5.0"
+        "cloudinary": "^1.41.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-fileupload": "^1.5.0",
+        "mongoose": "^8.4.1",
+        "nodemon": "^3.1.2"
   }
 }
