--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express-fileupload": "^1.5.0"
+    "express-fileupload": "^1.5.0",
         "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
